<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kristindragos.fourwords.ShowRulesActivity">

    <TextView
        android:text="@string/description_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/rules_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/rules_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/rules_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/rules_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/rules_e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/rules_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginBottom="10dp"
        android:textSize="18sp" />
</LinearLayout>
